refresh regent chart and show more information

--- a/src/components/Dashboard/styles.scss
+++ b/src/components/Dashboard/styles.scss
@@ -47,6 +47,9 @@
         font-weight: 600;
         padding: 10px;
       }
+      .preloader {
+        height: 500px;
+      }
       .report-card {
         min-width: 300px;
       }
